Client/src/styles/style.css
/* ... */
input[type="checkbox"].toggle:checked + label::after{

  transform: translateX(100%);
  background-color: hsl(100,70%, 60%);

}

input[type="checkbox"].toggle:checked + label::before{
  background-color: hsl(100,70%,90%);
}


/* ================================ QnA */

.required-field::after {
  content: "*";
  color: red;
}

.buttonLink {
  background: none!important;
  border: none;
  padding: 0!important;
  /*optional*/
  font-family: Arial, Helvetica, sans-serif;
  /*input has OS specific font-family*/
  color: #069;
  text-decoration: underline;
  cursor: pointer;
  font-size: 12px;
}

.QnA {
  font-family: Arial, Helvetica, sans-serif;
  position: relative;
  left: 25%;
  margin: auto;
}

.QnAImages {
  width: 50px;
}

.QS, .QSOpts {
  display: inline;
}

.QS {
  margin-bottom: 15px;
}

.QSOpts {
  margin-left: auto;
  float: right;
}

.qsModal {
  border: 1px solid black;
  width: 300px;
  margin: 10px;
  border-bottom: gray solid;
  justify-content: center;
}

.ansPictures {
  width: 60px;
  margin: 5px;
}

.ansModal {
  width: 70%;
  margin: 10px;
}

.modalForm {
  margin: 10px;
}

#QSList {
  overflow-Y: auto;
  max-height: 50vmax;
  width: 1000px;
}

.ansList {
  overflow-Y: auto;
  height: 75px;
  margin-top: 10px;
}

.ans {
  margin-bottom: 10px;
}

#searchBox {
  margin-bottom: 5px;
  padding: 5px;
  width: 1000px;
  border: #222 solid 1px;
  align-content: center;
}

.searchBar {
  margin-top: 5px;
  border: 0;
  width: 900px;
  height: 30px;
}

.searchSubmit {
  margin-top: 9px;
  float: right;
  border: 0;
  size: 20px;
  cursor: pointer;
}


.searchClose {
  margin-top: 9px;
  float: right;
  cursor: pointer;
  border: 0;
  size: 20px;
  background-color: white;
}

input, textarea {
  margin-bottom: 5px;
  padding: 5px;
  font-family: Arial
}

.QSboxbotbut{
  margin-right: 20px;
}

#collapse {
  margin-right: 7px;
}

#loadMore {
  margin-right: 7px;
}

.lvl4 {
  font-size: 12px;
}

.lvl3 {
  font-size: 18px;
}

.lvl2 {
  font-size: 22px;
}

.lvl1 {
  font-size: 26px;
}


/* ================================ Overview */

.Overview-main {
  position:relative;
  /* border:3px solid;
  border-color: green; */
  width: 1513;
  height: 850px;
  margin-left: 100px;
  margin-right: 100px;
}
.Overview-flexRowOne {
  display: flex;
  flex-direction: row;
  column-gap: 2vw;

}
.Overview-LeftDefault {
  order:1;
  width: 100%;
  height: 100%;
  scale: .90;
  background-color: grey;
  overflow: hidden;
}
.Overview-LeftExpanded {
  position:absolute;
  min-height: 800px;
  width: 100%;
  height:100%;
  z-index:100;
  max-height: 80%;
  max-width: 100%;
  background-color: grey;
  overflow: hidden;
}
.Overview-LeftExpanded .Overview-mainImg {
  height: 100%;
  top: 25%;
  display:block;
  width: 100%;
  object-fit: contain;
  overflow: hidden;
  cursor: -moz-zoom-out;
  cursor: -webkit-zoom-out;
  cursor: zoom-out;
  transition: 2000ms;
}

.Overview-gallery {
  background-color: transparent;
  height: 100%
}
.Overview-galleryMain {
  position:relative;
  height: 100%;
  width: 100%;

}
.Overview-mainImgDiv {
  height: 100%;
  width: 100%;
}
.Overview-mainImg {
  height: 100%;
  top: 25%;
  max-height: 800px;
  display:block;
  /* position: absolute; */
  width: 100%;
  object-fit: contain;
  overflow: hidden;
  cursor: -moz-zoom-in;
  cursor: -webkit-zoom-in;
  cursor: zoom-in;
  transition: 2000ms;
}


.Overview-galleryThumbnails {
  position: absolute;
  top: 5%;
  left: 10%;
  width: 10%;
  max-height: 80%;
  object-fit:contain;
}

.Overview-galleryThumbnail {
  width: 95%;
  height:95%;
  max-height: 50px;
  object-fit: contain;
}

.Overview-galleryThumbnailSelected {
  border: solid;
  border-color: gold;
  width: 80%;
  height:30%;

}


a.left, a.right {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-size: 25px;
}

/* Position the "next button" to the right */
a.right{
  right:0;
  border-radius: 3px 0 0 3px;
}

a.left{
  left:0;
}

a.up, a.down {
  cursor: pointer;
  position: absolute;
  left: 25%;
  width: 100%;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 25px;
}

/* Position the "next button" to the right */
a.up{
  top: -5%;
  border-radius: 3px 0 0 3px;
}

a.down{
  bottom: auto;
  border-radius: 3px 0 0 3px;
}

.Overview-Right {
  align-self: flex-start;
  order:2;
  top: 0;
  min-width: 30%;
  max-width: 30%;
  height: auto;
}
h2.Overview-category {
  font-size: 3vw;
  margin: 0;
  margin-top: 1.5vw;
}
.Overview-star-rating {
  height: 20px;
  margin-top: 2vw;
}

.selectedCheckmark {
  position: absolute;
  left: 60px;
  top: -12px;
  font-size: 45px;
}
.Overview-styles {
  padding-top: 15px;
}
.Overview-styleGroupOfFour {
  position:relative;
  display: flex;
  flex-wrap: nowrap;
}
.Overview-styleThumbnailImg {
  border-radius: 100%;
  height: 70px;
  width: 70px;
  object-fit: cover;
  z-index: 150;
}
.Overview-salePrice {
  color: red;
}
.Overview-originalPriceSale {
  text-decoration:line-through;
}
.Overview-originalPrice {
  color: black;
}
.flexRowTwo {
  display: flex;
}

.Overview-Bottom {
  width: auto;
  height: auto;
  z-index: 100;
}

.Overview-flexRowTwo {
  padding-top: 2vw;
}

.Overview-Description {
  display: flex;
  gap: 0%;
}

.Overview-descriptionSlogan {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  width: 50%;
  font-weight: bold;
}
.Overview-descriptionOverview {
  font-weight: initial;
}

.Overview-descriptionFeatures {
  padding-left: 10px;
  border-left: 3px solid black;
}

